<resources>
    <string name="app_name">IPFS</string>
    <string name="channel_name">Download Notifications</string>
    <string name="channel_description">For normal notifications like download</string>
    <string name="daemon_channel_name">Daemon Notifications</string>
    <string name="daemon_channel_description">Notification that the daemon has started</string>
    <string name="daemon_title">IPFS daemon is running forever &#8230;</string>
    <string name="navigation_drawer_open">Navigation open</string>
    <string name="navigation_drawer_close">Navigation close</string>
    <string name="action_info">Info</string>
    <string name="daemon_not_running">IPFS daemon is not running</string>
    <string name="peer_id">Peer ID</string>
    <string name="peer_access">The QR code (Peer ID \"%1$s\") contains all necessary information to access the IPFS node.</string>
    <string name="action_delete">Delete</string>
    <string name="licences">Licences</string>
    <string name="webui">WebUI</string>
    <string name="application">Application</string>
    <string name="multihash">Multihash (CID)</string>
    <string name="multihash_access">The QR code (CID \"%1$s\") contains all necessary information to get the content of the hash.</string>
    <string name="feature_camera_required">Feature camera required</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="daemon_restart_config_changed">Please restart the application due to the configuration changes.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="quic_support">QUIC Support</string>
    <string name="pubsub_support">Pubsub Support</string>
    <string name="commands">Commands</string>
    <string name="share_app">Share</string>
    <string name="choose_one">Choose an application</string>
    <string name="playstore_url">https://play.google.com/store/apps/details?id=threads.server</string>
    <string name="playstore_email">Let me recommend you this application.</string>
    <string name="issues">Issue Report</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="qr_code">QR Code</string>
    <string name="action_scan_peer">Scan Peer</string>
    <string name="action_edit_peer">Edit Peer</string>
    <string name="multihash_not_valid">Multihash is not valid</string>
    <string name="codec_not_supported">Codec is not supported</string>
    <string name="peers">Peers</string>
    <string name="console">Console</string>
    <string name="files">Files</string>
    <string name="offline_mode">Offline Mode</string>
    <string name="peer_exists_with_pid">Peer with the PID exists already</string>
    <string name="same_pid_like_host">Same Peer ID like the hosts Peer ID</string>
    <string name="peer_name">New Peer Name</string>
    <string name="peer_is_blocked">Peer is blocked. Unblock first.</string>
    <string name="user_connect_try">Peer \"%1$s\" connection request.</string>
    <string name="action_download">Download</string>
    <string name="no_peers_connected">Currently no peers are defined to share the data.</string>
    <string name="data_shared_with_peers">\"%1$s\" peers were notify to download the data.</string>
    <string name="select_files">File Chooser</string>
    <string name="action_select_all">Select All</string>
    <string name="action_clear_selection">Clear Selection</string>
    <string name="auto_relay_support">Enable Auto Relay</string>
    <string name="auto_relay_connect_support">Automatic Connection to a Relay</string>
    <string name="application_settings">Application Settings</string>
    <string name="ipfs_settings">IPFS Settings</string>
    <string name="file_not_supported">File not supported.</string>
    <string name="no_activity_found_to_handle_uri">No activity found which support the file.</string>
    <string name="action_scan_cid">Scan CID</string>
    <string name="action_edit_cid">Edit CID</string>
    <string name="action_file_cid">Upload</string>
    <string name="connection_timeout">Connection Timeout %1$s[s]</string>
    <string name="unknown_peer_sends_data">An unknown peer sends data.</string>
    <string name="peer_info">Peer Info</string>
    <string name="info">Info</string>
    <string name="ipfs_daemon_start_failure">IPFS failed during startup</string>
    <string name="ipfs_no_data">No data communication between users  can be received nor send.</string>
    <string name="ipfs_daemon_install_failure">IPFS installation failed</string>
    <string name="app_settings">Settings</string>
    <string name="permission_camera_denied">Permisssion camera denied</string>
    <string name="permission_audio_denied">Permission audio denied</string>
    <string name="peer_is_offline">Peer seems to be offline.</string>
    <string name="disconnect_call">Disconnect Call</string>
    <string name="room_description">
        Please enter a room name. Room names are shared with everyone, so think
        of something unique and send it to a friend.
    </string>
    <string name="favorites">Favorites</string>
    <string name="no_favorites">No favorites</string>
    <string name="invalid_url_title">Invalid URL</string>
    <string name="invalid_url_text">The URL or room name you entered resulted in an invalid URL: %1$s
    </string>
    <string name="channel_error_title">Connection error</string>
    <string name="connecting_to">Connecting to: %1$s</string>
    <string name="missing_url">FATAL ERROR: Missing URL to connect to.</string>
    <string name="camera2_texture_only_error">Camera2 only supports capturing to texture. Either disable Camera2 or enable capturing to texture in the options.</string>
    <string name="ok">OK</string>
    <string name="switch_camera">Switch front/back camera</string>
    <string name="capture_format_change_text">Slide to change capture format</string>
    <string name="muted">Muted</string>
    <string name="toggle_debug">Toggle debug view</string>
    <string name="toggle_mic">Toggle microphone on/off</string>
    <string name="action_settings">Settings</string>
    <string name="action_loopback">Loopback connection</string>
    <string name="connect_description">Connect to the room</string>
    <string name="add_favorite_description">Add favorite</string>
    <string name="format_description">%1$dx%2$d @ %3$d fps</string>
    <string name="pref_room_key">room_preference</string>
    <string name="pref_room_list_key">room_list_preference</string>
    <string name="pref_videosettings_key">video_settings_key</string>
    <string name="pref_videosettings_title">WebRTC video settings.</string>
    <string name="pref_videocall_key">videocall_preference</string>
    <string name="pref_videocall_title">Video call.</string>
    <string name="pref_videocall_dlg">Enable video in a call.</string>
    <string name="pref_videocall_default">true</string>
    <string name="pref_screencapture_key">screencapture_preference</string>
    <string name="pref_screencapture_title">Use screencapture.</string>
    <string name="pref_screencapture_default">false</string>
    <string name="pref_camera2_key">camera2_preference</string>
    <string name="pref_camera2_title">Use Camera2.</string>
    <string name="pref_camera2_default">true</string>
    <string name="pref_camera2_not_supported">Not supported on this device.</string>
    <string name="pref_resolution_key">resolution_preference</string>
    <string name="pref_resolution_title">Video resolution.</string>
    <string name="pref_resolution_dlg">Enter AppRTC local video resolution.</string>
    <string name="pref_resolution_default">Default</string>
    <string name="pref_fps_key">fps_preference</string>
    <string name="pref_fps_title">Camera fps.</string>
    <string name="pref_fps_dlg">Enter local camera fps.</string>
    <string name="pref_fps_default">Default</string>
    <string name="pref_capturequalityslider_key">capturequalityslider_preference</string>
    <string name="pref_capturequalityslider_title">Capture quality slider.</string>
    <string name="pref_capturequalityslider_dlg">Enable slider for changing capture quality.</string>
    <string name="pref_capturequalityslider_default">false</string>
    <string name="pref_maxvideobitrate_key">maxvideobitrate_preference</string>
    <string name="pref_maxvideobitrate_title">Maximum video bitrate setting.</string>
    <string name="pref_maxvideobitrate_dlg">Maximum video bitrate setting.</string>
    <string name="pref_maxvideobitrate_default">Default</string>
    <string name="pref_maxvideobitratevalue_key">maxvideobitratevalue_preference</string>
    <string name="pref_maxvideobitratevalue_title">Video encoder maximum bitrate.</string>
    <string name="pref_maxvideobitratevalue_dlg">Enter video encoder maximum bitrate in kbps.</string>
    <string name="pref_maxvideobitratevalue_default">1700</string>
    <string name="pref_videocodec_key">videocodec_preference</string>
    <string name="pref_videocodec_title">Default video codec.</string>
    <string name="pref_videocodec_dlg">Select default video codec.</string>
    <string name="pref_videocodec_default">VP8</string>
    <string name="pref_hwcodec_key">hwcodec_preference</string>
    <string name="pref_hwcodec_title">Video codec hardware acceleration.</string>
    <string name="pref_hwcodec_dlg">Use hardware accelerated video codec (if available).</string>
    <string name="pref_hwcodec_default">true</string>
    <string name="pref_capturetotexture_key">capturetotexture_preference</string>
    <string name="pref_capturetotexture_title">Video capture to surface texture.</string>
    <string name="pref_capturetotexture_dlg">Capture video to textures (if available).</string>
    <string name="pref_capturetotexture_default">true</string>
    <string name="pref_flexfec_key">flexfec_preference</string>
    <string name="pref_flexfec_title">Codec-agnostic Flexible FEC.</string>
    <string name="pref_flexfec_dlg">Enable FlexFEC.</string>
    <string name="pref_flexfec_default">false</string>
    <string name="pref_value_enabled">Enabled</string>
    <string name="pref_value_disabled">Disabled</string>
    <string name="pref_audiosettings_key">audio_settings_key</string>
    <string name="pref_audiosettings_title">WebRTC audio settings.</string>
    <string name="pref_startaudiobitrate_key">startaudiobitrate_preference</string>
    <string name="pref_startaudiobitrate_title">Audio bitrate setting.</string>
    <string name="pref_startaudiobitrate_dlg">Audio bitrate setting.</string>
    <string name="pref_startaudiobitrate_default">Default</string>
    <string name="pref_startaudiobitratevalue_key">startaudiobitratevalue_preference</string>
    <string name="pref_startaudiobitratevalue_title">Audio codec bitrate.</string>
    <string name="pref_startaudiobitratevalue_dlg">Enter audio codec bitrate in kbps.</string>
    <string name="pref_startaudiobitratevalue_default">32</string>
    <string name="pref_audiocodec_key">audiocodec_preference</string>
    <string name="pref_audiocodec_title">Default audio codec.</string>
    <string name="pref_audiocodec_dlg">Select default audio codec.</string>
    <string name="pref_audiocodec_default">OPUS</string>
    <string name="pref_noaudioprocessing_key">audioprocessing_preference</string>
    <string name="pref_noaudioprocessing_title">Disable audio processing.</string>
    <string name="pref_noaudioprocessing_dlg">Disable audio processing pipeline.</string>
    <string name="pref_noaudioprocessing_default">false</string>
    <string name="pref_aecdump_key">aecdump_preference</string>
    <string name="pref_aecdump_title">Create aecdump.</string>
    <string name="pref_aecdump_dlg">Enable diagnostic audio recordings.</string>
    <string name="pref_aecdump_default">false</string>
    <string name="pref_enable_save_input_audio_to_file_key">enable_key</string>
</resources>