<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_daemon"
        android:icon="@drawable/play_circle"
        android:orderInCategory="1"
        android:title="@string/daemon_title"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_info"
        android:icon="@drawable/server_network"
        app:iconTint="?android:textColorSecondary"
        android:orderInCategory="50"
        android:title="@string/action_info"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_id"
        android:orderInCategory="60"
        android:title="@string/peer_info"
        android:visible="true"
        app:showAsAction="never" />
</menu>