<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_scan_pid"
        android:icon="@drawable/account_plus"
        android:orderInCategory="3"
        android:title="@string/action_scan_peer"
        app:iconTint="?android:textColorSecondary"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_edit_pid"
        android:icon="@drawable/account_edit"
        android:orderInCategory="30"
        android:title="@string/action_edit_peer"
        app:iconTint="?android:textColorSecondary"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/select_all"
        android:orderInCategory="35"
        android:title="@string/action_select_all"
        android:visible="true"
        app:iconTint="?android:textColorSecondary"
        app:showAsAction="never" />


</menu>