<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/delete"
        android:orderInCategory="5"
        android:title="@string/action_delete"
        android:visible="true"
        app:iconTint="?android:textColorSecondary"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_send"
        android:icon="@drawable/send"
        android:orderInCategory="10"
        android:title="@string/action_send"
        android:visible="true"
        app:iconTint="?android:textColorSecondary"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_mark_all"
        android:icon="@drawable/expand_all_outline"
        android:orderInCategory="55"
        android:title="@string/action_select_all"
        android:visible="true"
        app:iconTint="?android:textColorSecondary"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_unmark_all"
        android:icon="@drawable/expand_all_outline"
        android:orderInCategory="55"
        android:title="@string/action_clear_selection"
        android:visible="true"
        app:iconTint="?android:textColorSecondary"
        app:showAsAction="never" />
</menu>