<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:id="@+id/row_first"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/menu_file_cid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/action_plus"
            android:drawablePadding="8dp"
            android:singleLine="true"
            android:text="@string/action_file_cid"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/menu_scan_cid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/action_scan_peer"
            android:singleLine="true"
            android:text="@string/action_scan_cid"
            android:drawablePadding="8dp"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/menu_edit_cid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/action_edit_peer"
            android:singleLine="true"
            android:text="@string/action_edit_cid"
            android:drawablePadding="8dp"
            android:textAlignment="center" />

    </TableRow>


</TableLayout>